--- a/PaoKemtin/front/index.html
+++ b/PaoKemtin/front/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Paokemtim</title>
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 <h1> Bem vindos ao Sistema PaoKemtim </h1>
