--- a/PaoKemtin/front/index.html
+++ b/PaoKemtin/front/index.html
@@ -9,6 +9,7 @@
 <h1> Bem vindos ao Sistema PaoKemtim </h1>
 <a href="cadastroPao.html">Cadastrar Pao</a></br>
 <a href="cadastroForno.html">Cadastrar Forno de pães (fornada)</a></br>
+<a href="forno.html">No forno</a>"
  
 </body>
 </html>
